:sparkles: error handling improvement, api-docs route added to dev mode, restricted production mode, documentation and more :)
